--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p><a href="https://www.instagram.com/Boschdog03/">Instagram</a></p>
             <p><a href="https://www.instagram.com/fumprdinkfolio/">Instagram Portfolio</a></p>
             <p><a href="https://twitter.com/boschdog03">Twitter (I dont post on it XP)</a></p>
-            <p><a href="https://www.instagram.com/fumprdinkfolio/">Redbubble</a></p>
+            <p><a href="https://www.redbubble.com/people/Boschdog03">Redbubble</a></p>
         </div>
         
     </body>
