--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
         <div class="content">
             <div id="Photography">
                 <h1>Photography</h1>
+                <h4></h4>
                 <p>Taking and grading photos is a big passion of mine. I mostly stick to macro and city with a little drizzle of night time photography. Depending on where I am I grade my photos through Lightroom CC on my phone or Photoshop CC on my PC. All of the photos I am proud of are on my portfolio accound on <a href="https://www.instagram.com/fumprdinkfolio/">Instagram</a> </p>
+                
+                <div class="Photo_Gallery">
+                    <img src="Photography\Photo_2.jpg">
+                    <img src="Photography\Photo_3.jpg">
+                    <img src="Photography\Photo_4.jpg">
+                    <img src="Photography\Photo_5.jpg">
+                    <img src="Photography\Photo_1.jpg">
+                    <img src="Photography\Photo_6.jpg">
+                    <img src="Photography\Photo_7.jpg">
+                    <img src="Photography\Photo_8.jpg">
+                </div>
             </div>
             <div>
                 
