--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div id="Photography">
                     <h1>Photography</h1>
 
-                    <p>Taking and grading photos is a <en>big</en> passion of mine. I mostly stick to macro and city with a little drizzle of night time photography. Depending on where I am I grade my photos through Lightroom CC on my phone or Photoshop CC on my PC. All of the photos I am proud of are on my portfolio accound on <a href="https://www.instagram.com/fumprdinkfolio/">Instagram</a> </p>
+                    <p>Taking and grading photos is a <en>big</en> passion of mine. I mostly stick to macro and city with a little drizzle of night time photography. Depending on where I am I grade my photos through Lightroom CC on my phone or Photoshop CC on my PC. All of the photos I am proud of are on my portfolio accound on <a href="https://www.instagram.com/fumprdinkfolio/" target="_blank">Instagram</a> </p>
 
                     <div class="Photo_Gallery">
                         <img src="Photography\Photo_2.jpg">
@@ -56,10 +56,10 @@
             <h1>Thanks for hanging around this far!</h1>
             <p>Here are some links to my other stuff</p>
             
-            <p><a href="https://www.instagram.com/Boschdog03/">My Main Instagram</a></p>
-            <p><a href="https://www.instagram.com/fumprdinkfolio/">My Instagram Portfolio</a></p>
-            <p><a href="https://twitter.com/boschdog03">My Twitter (I dont post on it XP)</a></p>
-            <p><a href="https://www.redbubble.com/people/Boschdog03">Redbubble</a></p>
+            <p><a href="https://www.instagram.com/Boschdog03/" target="_blank">My Main Instagram</a></p>
+            <p><a href="https://www.instagram.com/fumprdinkfolio/" target="_blank">My Instagram Portfolio</a></p>
+            <p><a href="https://twitter.com/boschdog03" target="_blank">My Twitter (I dont post on it XP)</a></p>
+            <p><a href="https://www.redbubble.com/people/Boschdog03" target="_blank">Redbubble</a></p>
         </div>
     </body>
 </html>
