--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <p><a href="https://www.instagram.com/fumprdinkfolio/" target="_blank">My Instagram Portfolio</a></p>
             <p><a href="https://twitter.com/boschdog03" target="_blank">My Twitter (I dont post on it XP)</a></p>
             <p><a href="https://www.redbubble.com/people/Boschdog03" target="_blank">Redbubble</a></p>
+            <p><a href="https://www.instagram.com/la_mccarthy22/" target="_blank">Follow this Chick, She deserves it ;)</a></p>
         </div>
     </body>
 </html>
