--- a/mobile.html
+++ b/mobile.html
@@ -70,7 +70,7 @@
                 <div id="Photography">
                     <h1>Photography</h1>
 
-                    <p>Taking and grading photos is a <en>big</en> passion of mine. I mostly stick to macro and city with a little drizzle of night time photography. Depending on where I am I grade my photos through Lightroom CC on my phone or Photoshop CC on my PC. All of the photos I am proud of are on my portfolio accound on <a href="https://www.instagram.com/fumprdinkfolio/" target="_blank">Instagram</a> </p>
+                    <p>Taking and grading photos is a <en>big</en> passion of mine. I mostly stick to macro and city with a little drizzle of night time photography. Depending on where I am I grade my photos through Lightroom CC on my phone or Photoshop CC on my PC. All of the photos I am proud of are on my portfolio account on <a href="https://www.instagram.com/fumprdinkfolio/" target="_blank">Instagram</a> </p>
 
                     <div class="Photo_Gallery">
                         <img src="Photography\Photo_2.jpg">
