--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div id="Post">
                 <h1>DOGFIGHTING</h1>
                 <p>My First Game!</p>
-                <iframe src="PlaneGame/index.html" width="1300" height="780" frameBorder="0"></iframe>
+                <a href="PlaneGame/fullscreen.html">Click Here to Play</a>
                 <p>The plane will follow your mouse, click to shoot down the Soviet planes! <br> Hold control to cut the engines, release to reignite them for a boost. Reignite too early and it won't start. <br> Every 5 waves you will get an upgrade. <br> Let the Soviets do too much damage and you will explode! <br> Chuck me an email or a instagram DM with the links in the footer for feedback or suggestions. <br>Thankyou and Have Fun!!</p>
             </div>
             
