--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p>My First Game!</p>
                 <a href="PlaneGame/fullscreen.html">Click Here to Play <br></a>
       
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSews_WYNvKhnT7_8Axu83z72aTzRJthYAkKMTNreGn22CI5YA/viewform?usp=sf_link" > please take a moment to fill out this survey. Your feedback is appreciated. </a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSews_WYNvKhnT7_8Axu83z72aTzRJthYAkKMTNreGn22CI5YA/viewform?usp=sf_link" > Please take a moment to fill out this survey. Your feedback is appreciated. =) </a>
                 <p>The plane will follow your mouse, click to shoot down the Soviet planes! <br> Hold control to cut the engines, release to reignite them for a boost. Reignite too early and it won't start. <br> Every 5 waves you will get an upgrade. <br> Let the Soviets do too much damage and you will explode! <br> Chuck me an email or a instagram DM with the links in the footer for feedback or suggestions. <br>Thankyou and Have Fun!!</p>
             </div>
             
